--- a/templates/nat.rsc.j2
+++ b/templates/nat.rsc.j2
@@ -1,6 +1,9 @@
 {% if  mikrotik_firewall.remove_old_nat_rules == true %}
 /ip firewall nat remove [/ip firewall nat find where dynamic=no]
 {% endif %}
+
+{% if mikrotik_firewall.nat_rules[0] is defined %}
+
 # Remove not defined
 /ip firewall nat remove [/ip firewall nat find where !(\
 {% for nat in mikrotik_firewall.nat_rules %}{% if iter is defined %} or {% endif %}(chain="{{nat.chain}}" \
@@ -67,6 +70,7 @@
 {% set iter = true %}
 {%endfor%}
 ) and dynamic=no]
+
 # ADD
 {% for nat in mikrotik_firewall.nat_rules %}
 :if ([/ip firewall nat find chain="{{nat.chain}}" {% if nat.action is defined %}action="{{nat.action}}" {%endif%}
@@ -191,3 +195,5 @@
 {% if nat.routing_table is defined %}routing-table={{nat.routing_table}} {%endif%}
 }
 {%endfor%}
+
+{% endif %}
